# GLEAMS

./: LICENSE.txt  README.md  environment.yml  setup.cfg  setup.py
data/: gleams_82c0124b.hdf5  gleams_reference_spectra.mgf
gleams/: __init__.py  config.py  encode_spectra.py  gleams.py  logger.py  rndm.py  train_embedder.py
gleams/cluster/: cluster.py
gleams/dag/: dag.py
gleams/embed/: config.py  embedder.py  encoder.py  ms_io.py  mzml_io.py  mzxml_io.py  rndm.py  spectrum.py  theoretical.py  utils.py
gleams/feature/: encoder.py  feature.py  spectrum.py
gleams/io/: mgf_io.py  ms_io.py  mzml_io.py  mzxml_io.py
gleams/massivekb/: massivekb.py
gleams/metadata/: metadata.py
gleams/ms_io/: mgf_io.py  ms_io.py  mzml_io.py  mzxml_io.py
gleams/nn/: data_generator.py  embedder.py  nn.py
ms2pip_c/cython_modules/: ms2pip_pyx.c
