[metadata]
name = gleams
author = Wout Bittremieux
author_email = wbittremieux@health.ucsd.edu
description =  GLEAMS is a Learned Embedding for Annotating Mass Spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bittremieux/gleams
project_urls =
    Bug Tracker = https://github.com/bittremieux/gleams/issues
license = BSD-3-Clause License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    apache-airflow>=1.10
    click>=7.1
    faiss-gpu>=1.6
    joblib>=0.16
    lxml>=4.6
    multiprocessing-logging>=0.3
    numba>=0.50
    numpy>=1.19
    pandas>=1.0
    pyarrow>=0.17
    pyteomics>=4.3
    scikit-learn>=0.23
    scipy>=1.5
    spectrum_utils>=0.3.5
    tensorflow-gpu>=2.2
    tqdm>=4.48

[options.entry_points]
console_scripts =
    gleams = gleams.gleams:embed
