[metadata]
name = gleams
author = Wout Bittremieux
author_email = wbittremieux@health.ucsd.edu
description =  GLEAMS is a Learned Embedding for Annotating Mass Spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bittremieux/gleams
project_urls =
    Bug Tracker = https://github.com/bittremieux/gleams/issues
license = BSD-3-Clause License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    apache-airflow==2.1.4
    click==7.1.2
    cython==0.29.24
    fastcluster==1.2.4
    h5py==2.10.0
    jinja2==2.11.3
    joblib==1.0.1
    keras==2.6.0
    lxml==4.6.3
    MarkupSafe==1.1.1
    multiprocessing-logging==0.3.1
    numba==0.54.0
    numpy==1.18.5
    pandas==1.3.3
    pyarrow==5.0.0
    pyteomics==4.5
    scikit-learn==1.0
    scipy==1.7.1
    spectrum_utils==0.3.5
    SQLAlchemy==1.3.24
    tensorflow_addons==0.13.0
    tensorflow-gpu==2.3.4
    tomli==1.2.1
    tqdm==4.62.3

[options.extras_require]
notebook =
    apricot-select==0.6.1
    jupyter==1.0.0
    matplotlib==3.4.3
    ppx==1.2.3
    scikit-optimize==0.8.1
    seaborn==0.11.2
    umap-learn==0.5.1

[options.data_files]
gleams/data =
    data/gleams_82c0124b.hdf5
    data/gleams_reference_spectra.mgf

[options.entry_points]
console_scripts =
    gleams = gleams.gleams:gleams
